--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
         </title>
     </head>
     <body>
-        <title>
 
-        </title>
+        <h1>
+            coucou bande de nouilles
+            <img src="./img/petit_ours.jpg" alt="My Image">
+
+        </h1>
 
 
     </body>
